--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,4 +14,43 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.weather {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 300px;
+  justify-content: space-around;
+  border-radius: 15px;
+}
+.text-block {
+  margin: 10px 0px 10px 0px;
+  padding: 10px 0px 10px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+p {
+  color: white;
+}
+.temp {
+  font-size: 20px;
+}
+.sity-name {
+  font-size: 15px;
+}
+.light {
+  background-color: blue;
+}
+.dark {
+  background-color: darkblue;
+}
+.ico {
+  height: 80px;
 }
